--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width"></meta>
     <meta name="apple-mobile-web-app-capable" content="yes"></meta>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"></meta>
+    <meta name="apple-mobile-web-app-status-bar-style" content="white">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
+    <meta name="theme-color" content="#ffffff">
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -42,4 +42,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <div cssdimensionstracker="true" style="position: fixed; top: 0px; width: 100%; height: 100vh; pointer-events: none; visibility: hidden; z-index: -1;"></div>
 </html>
